closDevOrg/force-app/main/default/objects/LOS_Stage_TAT__c/LOS_Stage_TAT__c.object-meta.xml
<CustomObject>
    <description>Service-managed stage interval with unique open context, captured SLA target/calendar key and gross duration measurements.</description>
    <label>LOS Stage TAT</label>
    <nameField>
        <displayFormat>STAT-{00000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LOS Stage TAT Records</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>