closDevOrg/force-app/main/default/objects/LOS_Stage_TAT__c/fields/LOS_Application__c.field-meta.xml
<CustomField>
    <fullName>LOS_Application__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Application. See docs/data-dictionary.md for usage.</description>
    <label>Application</label>
    <referenceTo>LOS_Credit_Application__c</referenceTo>
    <relationshipLabel>LOS Stage TAT Application</relationshipLabel>
    <relationshipName>LOS_Stage_TAT_Application</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>