closDevOrg/force-app/main/default/objects/LOS_Stage_TAT__c/fields/LOS_Calendar_Key__c.field-meta.xml
<CustomField>
    <fullName>LOS_Calendar_Key__c</fullName>
    <description>Controlled by LOS runtime services. See docs/task-02-runtime.md.</description>
    <label>Calendar Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>