closDevOrg/force-app/main/default/objects/LOS_Stage_TAT__c/fields/LOS_Completed_By__c.field-meta.xml
<CustomField>
    <fullName>LOS_Completed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Completed By. See docs/data-dictionary.md for usage.</description>
    <label>Completed By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>LOS Stage TAT Completed By</relationshipLabel>
    <relationshipName>LOS_Stage_TAT_Completed_By</relationshipName>
    <type>Lookup</type>
</CustomField>