closDevOrg/force-app/main/default/objects/LOS_Stage_TAT__c/fields/LOS_End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>LOS_End_Date_Time__c</fullName>
    <description>End Date Time. See docs/data-dictionary.md for usage.</description>
    <label>End Date Time</label>
    <type>DateTime</type>
</CustomField>