closDevOrg/force-app/main/default/objects/LOS_Stage_TAT__c/fields/LOS_Rework_Number__c.field-meta.xml
<CustomField>
    <fullName>LOS_Rework_Number__c</fullName>
    <description>Rework Number. See docs/data-dictionary.md for usage.</description>
    <label>Rework Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>