closDevOrg/force-app/main/default/objects/LOS_Stage_TAT__c/fields/LOS_SLA_Target_Minutes__c.field-meta.xml
<CustomField>
    <fullName>LOS_SLA_Target_Minutes__c</fullName>
    <description>SLA Target Minutes. See docs/data-dictionary.md for usage.</description>
    <label>SLA Target Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>