closDevOrg/force-app/main/default/objects/LOS_Stage_TAT__c/fields/LOS_Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>LOS_Start_Date_Time__c</fullName>
    <description>Start Date Time. See docs/data-dictionary.md for usage.</description>
    <label>Start Date Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>