closDevOrg/force-app/main/default/objects/LOS_Stage_TAT__c/validationRules/LOS_Date_Order.validationRule-meta.xml
<ValidationRule>
    <fullName>LOS_Date_Order</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(LOS_End_Date_Time__c)), LOS_End_Date_Time__c &lt; LOS_Start_Date_Time__c)</errorConditionFormula>
    <errorMessage>End must be on or after start.</errorMessage>
</ValidationRule>