closDevOrg/force-app/main/default/objects/LOS_Stage_TAT__c/validationRules/LOS_Nonnegative_Measures.validationRule-meta.xml
<ValidationRule>
    <fullName>LOS_Nonnegative_Measures</fullName>
    <active>true</active>
    <errorConditionFormula>OR(LOS_Rework_Number__c &lt; 0,LOS_Gross_Minutes__c &lt; 0,LOS_Business_Minutes__c &lt; 0,LOS_Paused_Minutes__c &lt; 0,LOS_SLA_Target_Minutes__c &lt; 0)</errorConditionFormula>
    <errorMessage>Counts and minutes cannot be negative.</errorMessage>
</ValidationRule>